fixed graph alignments

--- a/static/main.css
+++ b/static/main.css
@@ -24,13 +24,13 @@ body {
     left: 50%;
     z-index: 9999;
   }
-  
+
   /* Safari */
   @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
     100% { -webkit-transform: rotate(360deg); }
   }
-  
+
   @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
@@ -87,4 +87,13 @@ label {
     outline: 0;
     border-width: 0 0 2px;
     border-color: cornflowerblue;
+}
+
+#myChart1 {
+   width: 80%;
+   text-align:center;
+}
+
+canvas {
+   display: inline;
 }
